--- a/frontend/src/blocks/header/header.css
+++ b/frontend/src/blocks/header/header.css
@@ -1,6 +1,8 @@
 .header {
-  padding-bottom: 37px;
+  padding-bottom: 40px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
+  display: flex;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 600px) {
