--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,8 @@
 @import url(./blocks/popup/__close-icon/popup__close-icon.css);
 @import url(./blocks/popup/__title/popup__title.css);
 @import url(./blocks/popup/__title-confirm/popup__title-confirm.css);
+@import url(./blocks/popup/__title-success/popup__title-success.css);
+@import url(./blocks/popup/__title-fail/popup__title-fail.css);
 @import url(./blocks/popup/__form/popup__form.css);
 @import url(./blocks/popup/__label/popup__label.css);
 @import url(./blocks/popup/__field/popup__field.css);
@@ -24,9 +26,14 @@
 @import url(./blocks/popup/__container-img/popup__container-img.css);
 @import url(./blocks/popup/__text/popup__text.css);
 @import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/__success-icon/popup__success-icon.css);
+@import url(./blocks/popup/__fail-icon/popup__fail-icon.css);
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__tex-conteiner/header__tex-contein.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -51,3 +58,14 @@
 
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__copyright/footer__copyright.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__title/form__title.css);
+@import url(./blocks/form/__field/form__field.css);
+@import url(./blocks/form/__label/form__label.css);
+@import url(./blocks/form/__button/form__button.css);
+@import url(./blocks/form/__button/_disabled/form__button_disabled.css);
+@import url(./blocks/form/__error/form__error.css);
+@import url(./blocks/form/__error/_visible-user/form__error_visible-user.css);
+@import url(./blocks/form/__text/form__text.css);
+@import url(./blocks/form/__link-text/form__link-text.css);
